--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-filter-search": "^1.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "styled-components": "^5.2.3",
     "sweetalert2": "^10.16.7",
     "typescript": "^4.2.4",
